<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:background="@color/feature_unlock_dialog_bg"
                android:gravity="center">
    <RelativeLayout
            android:id="@+id/feature_unlock_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:padding="20dp"
            android:background="@drawable/dialog_feature_unlock_body_bg">
        <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="122dp"
                android:layout_marginTop="-85dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_feature_three_stars"/>
        <TextView
                android:id="@+id/hurray_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/icon"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_huge"
                android:text="@string/hurray_message"/>
        <TextView
                android:id="@+id/feature_unlock_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/hurray_message"
                android:layout_marginTop="15dp"
                android:textColor="@color/light_grey"
                android:textStyle="italic"
                android:textSize="@dimen/text_large"
                android:text="@string/feature_unlock_message"/>
        <TextView
                android:id="@+id/hint_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/feature_unlock_message"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_large"
                android:text="@string/feature_unlock_message"/>
    </RelativeLayout>
    <Button
            android:id="@+id/btn_show_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/feature_unlock_body"
            android:background="@drawable/dialog_feature_unlock_btn_bg"
            android:text="@string/action_show_me"
            android:textAllCaps="false"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/text_very_large"
            />
</RelativeLayout>